mssti_abbc3/root/styles/abbcode/abbcode.css
/* ... */
#AB-ImageName2        { float: right; margin: 0; padding: 2px 0; width: auto; height: 18px; color: #f1f1f1; line-height: 150%; font-size: 13px;}
#AB-OuterContainer    { position: relative; width: 250px; height: 250px; margin: auto auto; border: 4px solid white; background-color: white; }
#AB-LoadingLink       { z-index: 1000; position: absolute; top: 52%; left: 49%; width: 20px; height: 20px; margin: 0; padding: 0; background: transparent url("advancedbox_blank.gif") no-repeat; /* Trick IE into showing hover */ }
#AB-LoadingLink       { background: url("advancedbox_icon_loading.gif") top left no-repeat; }
#AB-CloserLink, #AB-ZoomLink, #AB-PrevLink, #AB-NextLink, #AB-PlayLink, #AB-PauseLink { z-index: 104; margin: 0; padding: 0; width: 20px; height: 20px; float: left; background: transparent url("advancedbox_blank.gif") no-repeat; /* Trick IE into showing hover */ }
#AB-CloserLink        { background: url("advancedbox_icon_close.gif") top left no-repeat; }
#AB-ZoomLink          { background: url("advancedbox_icon_zoom.gif")  top left no-repeat; }
#AB-PrevLink          { background: url("advancedbox_icon_prev.gif")  top left no-repeat; }
#AB-NextLink          { background: url("advancedbox_icon_next.gif")  top left no-repeat; }
#AB-PlayLink          { background: url("advancedbox_icon_play.gif")  top left no-repeat; }
#AB-PauseLink         { background: url("advancedbox_icon_pause.gif") top left no-repeat; }
#AB-nOnText           { margin: 0; padding: 0 5px; width: auto; min-width: 50px; height: 18px; color: #666; float: left; line-height: 150%; border: 1px solid #999; background: #f1f1f1 url("advancedbox_blank.gif") no-repeat; /* Trick IE into showing hover */ }
#AB-ToolBar a:visited { border: 0; cursor: pointer; background-position: 100% 0; }
#AB-ToolBar a:hover   { border: 0; cursor: pointer; background-position: 0 100%; }
#AB-ToolBar a.disabled{ cursor: default; background-position: 100% 0; }
/* AdvancedBox JS - END */

/* Hidden block - Start */
.hiddenbox, .unhiddenbox {
	padding: 8px;
	font-size: 1em;
	-moz-border-radius: 8px;
	-webkit-border-radius: 8px;
	border-radius: 8px;
}

.hidden, .unhidden {
	margin-bottom: 8px;
	font-weight: bold;
	display: block;
}

.hiddenbox {
	background-color: #f3e3e6;
	border: 1px solid #e599aa;
}

.hidden {
	color: #80001c;
}

.unhiddenbox {
	background-color: #c5e3bf;
	border: 1px solid #548b54;
}

.unhidden {
	color: #2f4f2f;
}

.hiddentext {
	color: #80001c;
}
/* Hidden block - End */

/* Anchor - Start */
a.anchor {
	color: #ff0000;
}

span.anchor {
	border-bottom: 1px #000000 dashed;
}
/* Anchor - End */

/* bbvideo - Start */
.bbvideotitle {
	padding: 5px;
	background-color: #ffffff;
	border: 1px solid #555555;
	text-transform: uppercase;
	font-size: 11px;
	font-weight: bold;
	color: #555555;
	clear: both;
}

.bbvideotitle img {
	float: left;
	margin-right: 5px;
}

.bbvideocontent {
/*
	padding: 5px;
	background-color: #555555;
	text-align: center;
	line-height: 1.0em;
	-moz-border-radius: 0 0 3px 3px;
	-webkit-border-radius: 0 0 3px 3px;
	border-radius: 0 0 3px 3px;
*/
	padding: 0;
	background-color: #555555;
	line-height: 0em;
	font-size: 0px;
}

.bbvideo_thumb {
	width: 130px;
	height: 97px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius:5px;
}
/* bbvideo - End */

/* Scrippet.css - Start
   Scrippet is a CSS template designed for including short sections of screenplay-formatted material in blog posts.
   Originally developed by John August - johnaugust.com
   Last modified 8/21/08
*/
#scrippet {
	width: 400px;
	color: #000000;
	margin-bottom: 16px !important;
	margin-left: 20px !important;
	padding: 5px 14px 15px 14px;
	margin-bottom: 16px;
	margin-left: 40px;
}
#scrippet .scrippet-shadow {
	border: none;
	background: url("images/scrippet/shadowAlpha.png") no-repeat bottom right !important;
	padding: 0 6px 6px 0 !important;
}
#scrippet .inner-shadow {
	background-color: #fffffc;
	border: 1px solid #aaaaaa;
	padding: 5px !important;
}
#scrippet p {
	font: .9em/1.3em Courier, "Courier New", monospace;
	margin: 0;
}

#scrippet .sceneheader {
	font-weight: bold;
}

#scrippet .sceneheader, 
#scrippet .action, 
#scrippet .character {
	padding-top: 1.5ex;
}

#scrippet .action {
	padding-right: 5%;
}

#scrippet .character {
	margin-left: 40%;
}

#scrippet .dialogue {
	margin-left: 15%;
	padding-right: 15%;
}

#scrippet .parenthetical {
	margin-left: 32%;
	padding-right: 30%;
}

#scrippet .dialogue + .parenthetical {
	padding-bottom: 0;
}

#scrippet .transition {
	padding-top: 3ex;
	margin-left: 65%;
	padding-bottom: 1.5ex;
}
/* Scrippet.css - End */

/* SimpleTabs: default style - Start
   Code based off :
		http://pirex.com.br/wordpress-plugins/post-tabs/
		http://labs.komrade.gr/simpletabs/
*/

div.simpleTabs {
	padding: 10px;
}

div.simpleTabsContent.currentTab {
	display: block;
}

div.simpleTabsContent {
	display: none;
	border: 1px solid #cccccc;
	margin-top: 0 !important;
	padding: 1em !important;
	background-color: #ffffff;
}

div.simpleTabsContent .simpleTabsTitles {
	display: none;
}

ul.simpleTabsNavigation {
	margin: 5px 2px 3px 1.5em !important;
	font-size: 1.0em;
	list-style-type: none !important;
	line-height: normal;
	text-align: left;
	display: block !important;
	background: none;
	color: #ff0000;
}

ul.simpleTabsNavigation li {
	list-style: none;
	display: inline !important;
	font-weight: bold;
	line-height: normal;
	background: none;
	padding: 0;
	margin: 0;
}

ul.simpleTabsNavigation li:before {
	content: none;
}

ul.simpleTabsNavigation li a {
	padding: 0.2em 0.5em !important;
	cursor: pointer;
	text-decoration: none;
	color: #777777;
	border: 1px solid #cccccc;
	background-image: url("images/bg/tab-inactive.png");
}

ul.simpleTabsNavigation li a:hover, ul.simpleTabsNavigation li a:focus {
	color: #666666;
	outline: 0;
	background: #ffffff none !important;
}
/* ... */

